fix: Unify spacing around post links

--- a/components/post-link.module.scss
+++ b/components/post-link.module.scss
@@ -61,6 +61,6 @@
   }
 
   &:last-of-type {
-    margin-bottom: 1em;
+    margin-bottom: 1.5em;
   }
 }
